feat: Agregar iconos al los items del sidenav

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </a>
           <ul class="right hide-on-med-and-down">
             <li>
-              <a href="#about" class="waves-effect waves-js">Sobre mi</a>
+              <a href="#about" class="waves-effect waves-js">Sobre mí</a>
             </li>
             <li>
               <a href="#skills" class="waves-effect waves-js">Tecnologías</a>
@@ -129,10 +129,30 @@
       </nav>
     </div>
     <ul class="sidenav" id="mobile-nav">
-      <li><a href="#about" class="waves-effect waves-js">Sobre mi</a></li>
-      <li><a href="#skills" class="waves-effect waves-js">Tecnologías</a></li>
-      <li><a href="#proyects" class="waves-effect waves-js">Proyectos</a></li>
-      <li><a href="#contact" class="waves-effect waves-js">Contacto</a></li>
+      <li>
+        <a href="#about" class="waves-effect waves-js">
+          <i class="material-icons primary-js-text text-darken-2">person</i>
+          Sobre mí
+        </a>
+      </li>
+      <li>
+        <a href="#skills" class="waves-effect waves-js">
+          <i class="material-icons primary-js-text text-darken-2">code</i>
+          Tecnologías
+        </a>
+      </li>
+      <li>
+        <a href="#proyects" class="waves-effect waves-js">
+          <i class="material-icons primary-js-text text-darken-2">web</i>
+          Proyectos
+        </a>
+      </li>
+      <li>
+        <a href="#contact" class="waves-effect waves-js">
+          <i class="material-icons primary-js-text text-darken-2">email</i>
+          Contacto
+        </a>
+      </li>
     </ul>
     <!-- Materialize -->
     <script src="js/bin/materialize.min.js"></script>
