feat: Mostrar logo y titulo en el header

--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
         <li><a href="#proyects" class="waves-effect waves-js">Proyectos</a></li>
         <li><a href="#contact" class="waves-effect waves-js">Contacto</a></li>
       </ul>
+      <div class="container header__content">
+        <img
+          src="../images/brand-logos/logo-vertical-white.svg"
+          alt="Logo blanco de JSamuel"
+        />
+        <h1 class="center-align white-text">Desarrollador Frontend</h1>
+      </div>
     </header>
     <!-- Materialize -->
     <script src="js/bin/materialize.min.js"></script>
