feat: Agregar mi descripcion en la seccion about
Se dejo un una imagen de prueba para colocalra despues.
La grid tambien puede cambiar.

--- a/index.html
+++ b/index.html
@@ -166,6 +166,40 @@
         <h1 class="center-align white-text">Desarrollador Frontend</h1>
       </div>
     </header>
+    <main>
+      <div class="container">
+        <section class="section" id="about">
+          <h2 class="center-align">Sobre mí</h2>
+          <div class="row">
+            <div class="col s12 l7 xl8">
+              <p>
+                Mi nombre es José Samuel Aldana Pérez, soy un joven mexicano 🇲🇽
+                apasionado por el mundo de la web, aún soy un novato, pero lo
+                disfruto porque estoy aprendiendo nuevas cosas que me permiten
+                crear lo que sea.
+              </p>
+              <p>
+                Actualmente curso los primeros semestres de ingeniería en
+                sistemas computacionales 👨‍💻, pues además de la programación,
+                también me gustan las matemáticas 🧮, su complejidad de fascinan
+                y estoy seguro de que me ayudaran a crecer como profesional.
+              </p>
+              <p>
+                Todavía no cuento con experiencia profesional, pero me estoy
+                preparando para ello 💪, espero que muy pronto comience a
+                colaborar en proyectos reales con una pizca de código 👌.
+              </p>
+            </div>
+            <div class="col s12 l5 xl4">
+              <img
+                src="https://via.placeholder.com/150?text=JSamuel"
+                alt="Fotografía mia"
+              />
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
     <!-- Materialize -->
     <script src="js/bin/materialize.min.js"></script>
     <script>
