--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
     </header>
     <main>
       <div class="container">
+        <!-- About me -->
         <section class="section" id="about">
           <h2 class="center-align">Sobre mí</h2>
           <div class="row">
@@ -202,6 +203,105 @@
                   alt="Fotografía mia"
                 />
               </picture>
+            </div>
+          </div>
+        </section>
+        <!-- Skills -->
+        <section class="section" id="skills">
+          <h2 class="center-align">Tecnologías</h2>
+          <p>
+            Actualmente sigo estudiando JavaScript, para después aprender NodeJS
+            y ReactJS. En cuanto a CSS sé trabajar con Flexbox, CSS Grid y
+            utilizo la metodología BEM.
+          </p>
+          <div class="row">
+            <div class="col s12 m6 l3">
+              <div class="card-panel center-align">
+                <img
+                  src="images/skills-logos/html-5.svg"
+                  class="skills__img"
+                  alt="Logo de HTML 5"
+                />
+                <h5>HTML 5</h5>
+                <span>Lenguaje de marcado</span>
+              </div>
+            </div>
+            <div class="col s12 m6 l3">
+              <div class="card-panel center-align">
+                <img
+                  src="images/skills-logos/css-3.svg"
+                  class="skills__img"
+                  alt="Logo de CSS 3"
+                />
+                <h5>CSS 3</h5>
+                <span>Lenguaje de estilos</span>
+              </div>
+            </div>
+            <div class="col s12 m6 l3">
+              <div class="card-panel center-align">
+                <img
+                  src="images/skills-logos/javascript.svg"
+                  class="skills__img"
+                  alt="Logo de JavaScript"
+                />
+                <h5>JavaScript</h5>
+                <span>Lenguaje de programación</span>
+              </div>
+            </div>
+            <div class="col s12 m6 l3">
+              <div class="card-panel center-align">
+                <img
+                  src="images/skills-logos/git-icon.svg"
+                  class="skills__img"
+                  alt="Logo de Git"
+                />
+                <h5>Git</h5>
+                <span>Sistema de control de versiones</span>
+              </div>
+            </div>
+            <div class="col s12 m6 l3">
+              <div class="card-panel center-align">
+                <img
+                  src="images/skills-logos/github-icon.svg"
+                  class="skills__img"
+                  alt="Logo de GitHub"
+                />
+                <h5>GitHub</h5>
+                <span>Servicio de repositorios de Git</span>
+              </div>
+            </div>
+            <div class="col s12 m6 l3">
+              <div class="card-panel center-align">
+                <img
+                  src="images/skills-logos/materializecss.svg"
+                  class="skills__img"
+                  alt="Logo de Materialize CSS"
+                />
+                <h5>Materialize CSS</h5>
+                <span>Framework de CSS</span>
+              </div>
+            </div>
+            <div class="col s12 m6 l3">
+              <div class="card-panel center-align">
+                <img
+                  src="images/skills-logos/sass.svg"
+                  class="skills__img"
+                  alt="Logo de Sass"
+                />
+                <h5>Sass</h5>
+                <span>Preprocesador de CSS</span>
+              </div>
+            </div>
+            <div class="col s12 m6 l3">
+              <div class="card-panel center-align">
+                <img
+                  src="images/skills-logos/figma.svg"
+                  class="skills__img"
+                  alt="Logo de Figma"
+                />
+                <h5>Figma</h5>
+                <span>Software de diseño</span>
+              </div>
             </div>
           </div>
         </section>
