feat: Crear fuente bold para los textos
Se utilizo la fuente medium de roboto como tipografia de los
elementos strong, que se agregaron para resaltar las tecnologias
que menciono en el parrafo.
Se elimino la descripcion en las cards, en su lugar se coloco en
el atributo title de las imagenes para que se muestre al pasar el
cursor.
Los nombres de las tecnologias no generan saltos de linea cuando
no caben, en su lugar se cortan y se muestran tres puntos.

--- a/index.html
+++ b/index.html
@@ -210,9 +210,11 @@
         <section class="section" id="skills">
           <h2 class="center-align">Tecnologías</h2>
           <p>
-            Actualmente sigo estudiando JavaScript, para después aprender NodeJS
-            y ReactJS. En cuanto a CSS sé trabajar con Flexbox, CSS Grid y
-            utilizo la metodología BEM.
+            Actualmente sigo estudiando <strong>JavaScript</strong>, para
+            después aprender <strong>NodeJS</strong> y <strong>ReactJS</strong>.
+            En cuanto a CSS sé trabajar con <strong>Flexbox</strong>,
+            <strong>CSS Grid</strong> y utilizo la metodología
+            <strong>BEM</strong>.
           </p>
           <div class="row">
             <div class="col s12 m6 l3">
@@ -221,9 +223,9 @@
                   src="images/skills-logos/html-5.svg"
                   class="skills__img"
                   alt="Logo de HTML 5"
+                  title="Lennguaje de marcado de hipertexto"
                 />
-                <h5>HTML 5</h5>
-                <span>Lenguaje de marcado</span>
+                <h5 class="truncate">HTML 5</h5>
               </div>
             </div>
             <div class="col s12 m6 l3">
@@ -232,9 +234,9 @@
                   src="images/skills-logos/css-3.svg"
                   class="skills__img"
                   alt="Logo de CSS 3"
+                  title="Lenguaje de estilos"
                 />
-                <h5>CSS 3</h5>
-                <span>Lenguaje de estilos</span>
+                <h5 class="truncate">CSS 3</h5>
               </div>
             </div>
             <div class="col s12 m6 l3">
@@ -243,9 +245,9 @@
                   src="images/skills-logos/javascript.svg"
                   class="skills__img"
                   alt="Logo de JavaScript"
+                  title="Lenguaje de programación"
                 />
-                <h5>JavaScript</h5>
-                <span>Lenguaje de programación</span>
+                <h5 class="truncate">JavaScript</h5>
               </div>
             </div>
             <div class="col s12 m6 l3">
@@ -254,9 +256,9 @@
                   src="images/skills-logos/git-icon.svg"
                   class="skills__img"
                   alt="Logo de Git"
+                  title="Sistema de control de versiones"
                 />
-                <h5>Git</h5>
-                <span>Sistema de control de versiones</span>
+                <h5 class="truncate">Git</h5>
               </div>
             </div>
             <div class="col s12 m6 l3">
@@ -265,9 +267,9 @@
                   src="images/skills-logos/github-icon.svg"
                   class="skills__img"
                   alt="Logo de GitHub"
+                  title="Servicio de repositorios de Git"
                 />
-                <h5>GitHub</h5>
-                <span>Servicio de repositorios de Git</span>
+                <h5 class="truncate">GitHub</h5>
               </div>
             </div>
             <div class="col s12 m6 l3">
@@ -276,9 +278,9 @@
                   src="images/skills-logos/materializecss.svg"
                   class="skills__img"
                   alt="Logo de Materialize CSS"
+                  title="Framework de CSS"
                 />
-                <h5>Materialize CSS</h5>
-                <span>Framework de CSS</span>
+                <h5 class="truncate">Materialize CSS</h5>
               </div>
             </div>
             <div class="col s12 m6 l3">
@@ -287,9 +289,9 @@
                   src="images/skills-logos/sass.svg"
                   class="skills__img"
                   alt="Logo de Sass"
+                  title="Preprocesador de CSS"
                 />
-                <h5>Sass</h5>
-                <span>Preprocesador de CSS</span>
+                <h5 class="truncate">Sass</h5>
               </div>
             </div>
             <div class="col s12 m6 l3">
@@ -298,9 +300,9 @@
                   src="images/skills-logos/figma.svg"
                   class="skills__img"
                   alt="Logo de Figma"
+                  title="Software de diseño"
                 />
-                <h5>Figma</h5>
-                <span>Software de diseño</span>
+                <h5 class="truncate">Figma</h5>
               </div>
             </div>
           </div>
