fix: Corregir el enlace del logo del hero

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <!-- Hero -->
       <div class="container header__content">
         <img
-          src="../images/brand-logos/logo-vertical-white.svg"
+          src="images/brand-logos/logo-vertical-white.svg"
           alt="Logo blanco de JSamuel"
         />
         <h1 class="center-align white-text">Desarrollador Frontend</h1>
