--- a/index.html
+++ b/index.html
@@ -307,6 +307,252 @@
             </div>
           </div>
         </section>
+        <!-- Proyects -->
+        <section class="section" id="proyects">
+          <h2 class="center-align">Proyectos</h2>
+          <div class="row">
+            <div class="col s12 m6 l4">
+              <div class="card sticky-action hoverable">
+                <div class="card-image waves-effect waves-block waves-light">
+                  <img
+                    class="activator"
+                    src="images/miniatures/miniature-proyect-6.jpg"
+                    alt="Captura del proyecto"
+                  />
+                </div>
+                <div class="card-content">
+                  <span class="card-title activator grey-text text-darken-4"
+                    >Proyecto 1<i class="material-icons right"
+                      >more_vert</i
+                    ></span
+                  >
+                  <p>
+                    <div class="chip">HTML</div>
+                    <div class="chip">CSS</div>
+                    <div class="chip">JS</div>
+                  </p>
+                </div>
+                <div class="card-action">
+                  <a class="waves-effect waves-light btn-small"
+                    ><i class="material-icons left">search</i>Vivo</a
+                  >
+                  <a class="waves-effect waves-light btn-small"
+                    ><i class="material-icons left">code</i>Código</a
+                  >
+                </div>
+                <div class="card-reveal">
+                  <span class="card-title grey-text text-darken-4"
+                    >Proyecto 1<i class="material-icons right">close</i></span
+                  >
+                  <p>
+                    Here is some more information about this product that is
+                    only revealed once clicked on.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m6 l4">
+              <div class="card sticky-action hoverable">
+                <div class="card-image waves-effect waves-block waves-light">
+                  <img
+                    class="activator"
+                    src="images/miniatures/miniature-proyect-6.jpg"
+                    alt="Captura del proyecto"
+                  />
+                </div>
+                <div class="card-content">
+                  <span class="card-title activator grey-text text-darken-4"
+                    >Proyecto 1<i class="material-icons right"
+                      >more_vert</i
+                    ></span
+                  >
+                  <p>
+                    <div class="chip">HTML</div>
+                    <div class="chip">CSS</div>
+                    <div class="chip">JS</div>
+                  </p>
+                </div>
+                <div class="card-action">
+                  <a class="waves-effect waves-light btn-small"
+                    ><i class="material-icons left">search</i>Vivo</a
+                  >
+                  <a class="waves-effect waves-light btn-small"
+                    ><i class="material-icons left">code</i>Código</a
+                  >
+                </div>
+                <div class="card-reveal">
+                  <span class="card-title grey-text text-darken-4"
+                    >Proyecto 1<i class="material-icons right">close</i></span
+                  >
+                  <p>
+                    Here is some more information about this product that is
+                    only revealed once clicked on.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m6 l4">
+              <div class="card sticky-action hoverable">
+                <div class="card-image waves-effect waves-block waves-light">
+                  <img
+                    class="activator"
+                    src="images/miniatures/miniature-proyect-6.jpg"
+                    alt="Captura del proyecto"
+                  />
+                </div>
+                <div class="card-content">
+                  <span class="card-title activator grey-text text-darken-4"
+                    >Proyecto 1<i class="material-icons right"
+                      >more_vert</i
+                    ></span
+                  >
+                  <p>
+                    <div class="chip">HTML</div>
+                    <div class="chip">CSS</div>
+                    <div class="chip">JS</div>
+                  </p>
+                </div>
+                <div class="card-action">
+                  <a class="waves-effect waves-light btn-small"
+                    ><i class="material-icons left">search</i>Vivo</a
+                  >
+                  <a class="waves-effect waves-light btn-small"
+                    ><i class="material-icons left">code</i>Código</a
+                  >
+                </div>
+                <div class="card-reveal">
+                  <span class="card-title grey-text text-darken-4"
+                    >Proyecto 1<i class="material-icons right">close</i></span
+                  >
+                  <p>
+                    Here is some more information about this product that is
+                    only revealed once clicked on.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m6 l4">
+              <div class="card sticky-action hoverable">
+                <div class="card-image waves-effect waves-block waves-light">
+                  <img
+                    class="activator"
+                    src="images/miniatures/miniature-proyect-6.jpg"
+                    alt="Captura del proyecto"
+                  />
+                </div>
+                <div class="card-content">
+                  <span class="card-title activator grey-text text-darken-4"
+                    >Proyecto 1<i class="material-icons right"
+                      >more_vert</i
+                    ></span
+                  >
+                  <p>
+                    <div class="chip">HTML</div>
+                    <div class="chip">CSS</div>
+                    <div class="chip">JS</div>
+                  </p>
+                </div>
+                <div class="card-action">
+                  <a class="waves-effect waves-light btn-small"
+                    ><i class="material-icons left">search</i>Vivo</a
+                  >
+                  <a class="waves-effect waves-light btn-small"
+                    ><i class="material-icons left">code</i>Código</a
+                  >
+                </div>
+                <div class="card-reveal">
+                  <span class="card-title grey-text text-darken-4"
+                    >Proyecto 1<i class="material-icons right">close</i></span
+                  >
+                  <p>
+                    Here is some more information about this product that is
+                    only revealed once clicked on.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m6 l4">
+              <div class="card sticky-action hoverable">
+                <div class="card-image waves-effect waves-block waves-light">
+                  <img
+                    class="activator"
+                    src="images/miniatures/miniature-proyect-6.jpg"
+                    alt="Captura del proyecto"
+                  />
+                </div>
+                <div class="card-content">
+                  <span class="card-title activator grey-text text-darken-4"
+                    >Proyecto 1<i class="material-icons right"
+                      >more_vert</i
+                    ></span
+                  >
+                  <p>
+                    <div class="chip">HTML</div>
+                    <div class="chip">CSS</div>
+                    <div class="chip">JS</div>
+                  </p>
+                </div>
+                <div class="card-action">
+                  <a class="waves-effect waves-light btn-small"
+                    ><i class="material-icons left">search</i>Vivo</a
+                  >
+                  <a class="waves-effect waves-light btn-small"
+                    ><i class="material-icons left">code</i>Código</a
+                  >
+                </div>
+                <div class="card-reveal">
+                  <span class="card-title grey-text text-darken-4"
+                    >Proyecto 1<i class="material-icons right">close</i></span
+                  >
+                  <p>
+                    Here is some more information about this product that is
+                    only revealed once clicked on.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col s12 m6 l4">
+              <div class="card sticky-action hoverable">
+                <div class="card-image waves-effect waves-block waves-light">
+                  <img
+                    class="activator"
+                    src="images/miniatures/miniature-proyect-6.jpg"
+                    alt="Captura del proyecto"
+                  />
+                </div>
+                <div class="card-content">
+                  <span class="card-title activator grey-text text-darken-4"
+                    >Proyecto 1<i class="material-icons right"
+                      >more_vert</i
+                    ></span
+                  >
+                  <p>
+                    <div class="chip">HTML</div>
+                    <div class="chip">CSS</div>
+                    <div class="chip">JS</div>
+                  </p>
+                </div>
+                <div class="card-action">
+                  <a class="waves-effect waves-light btn-small"
+                    ><i class="material-icons left">search</i>Vivo</a
+                  >
+                  <a class="waves-effect waves-light btn-small"
+                    ><i class="material-icons left">code</i>Código</a
+                  >
+                </div>
+                <div class="card-reveal">
+                  <span class="card-title grey-text text-darken-4"
+                    >Proyecto 1<i class="material-icons right">close</i></span
+                  >
+                  <p>
+                    Here is some more information about this product that is
+                    only revealed once clicked on.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
     <!-- Materialize -->
