feat: Establecer imagenes y texto a las cards
Tambien se enlazaron los proyectos en vivo y el codigo a los
botones.

--- a/index.html
+++ b/index.html
@@ -210,11 +210,19 @@
         <section class="section" id="skills">
           <h2 class="center-align">Tecnologías</h2>
           <p>
-            Actualmente sigo estudiando <strong>JavaScript</strong>, para
-            después aprender <strong>NodeJS</strong> y <strong>ReactJS</strong>.
-            En cuanto a CSS sé trabajar con <strong>Flexbox</strong>,
-            <strong>CSS Grid</strong> y utilizo la metodología
-            <strong>BEM</strong>.
+            Actualmente sigo estudiando
+            <strong>JavaScript</strong>
+            , para después aprender
+            <strong>NodeJS</strong>
+            y
+            <strong>ReactJS</strong>
+            . En cuanto a CSS sé trabajar con
+            <strong>Flexbox</strong>
+            ,
+            <strong>CSS Grid</strong>
+            y utilizo la metodología
+            <strong>BEM</strong>
+            .
           </p>
           <div class="row">
             <div class="col s12 m6 l3">
@@ -312,207 +320,234 @@
           <h2 class="center-align">Proyectos</h2>
           <div class="row">
             <div class="col s12 m6 l4">
-              <div class="card sticky-action hoverable">
+              <article class="card sticky-action hoverable">
                 <div class="card-image waves-effect waves-block waves-light">
                   <img
                     class="activator"
-                    src="images/miniatures/miniature-proyect-6.jpg"
+                    src="images/miniatures/miniature-proyect-1.jpg"
                     alt="Captura del proyecto"
                   />
                 </div>
                 <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4"
-                    >Proyecto 1<i class="material-icons right"
-                      >more_vert</i
-                    ></span
-                  >
-                  <p>
-                    <div class="chip">HTML</div>
-                    <div class="chip">CSS</div>
-                    <div class="chip">JS</div>
-                  </p>
+                  <span class="card-title activator grey-text text-darken-4">
+                    Portafolio
+                    <i class="material-icons right">more_vert</i>
+                  </span>
+                  <p><span class="chip">Materialize</span></p>
                 </div>
                 <div class="card-action">
-                  <a class="waves-effect waves-light btn-small"
-                    ><i class="material-icons left">search</i>Vivo</a
+                  <a
+                    href="https://jsamuelap.github.io/"
+                    target="_blank"
+                    class="waves-effect waves-light btn-small"
                   >
-                  <a class="waves-effect waves-light btn-small"
-                    ><i class="material-icons left">code</i>Código</a
+                    <i class="material-icons left">search</i>
+                    Vivo
+                  </a>
+                  <a
+                    href="https://github.com/JSamuelAP/JSamuelAP.github.io"
+                    target="_blank"
+                    class="waves-effect waves-light btn-small"
                   >
+                    <i class="material-icons left">code</i>
+                    Código
+                  </a>
                 </div>
                 <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4"
-                    >Proyecto 1<i class="material-icons right">close</i></span
-                  >
+                  <span class="card-title grey-text text-darken-4">
+                    Portafolio
+                    <i class="material-icons right">close</i>
+                  </span>
                   <p>
-                    Here is some more information about this product that is
-                    only revealed once clicked on.
+                    Mi portafolio de desarrollador para mostrar mis habilidades
+                    📁.
                   </p>
                 </div>
-              </div>
+              </article>
             </div>
             <div class="col s12 m6 l4">
-              <div class="card sticky-action hoverable">
+              <article class="card sticky-action hoverable">
                 <div class="card-image waves-effect waves-block waves-light">
                   <img
                     class="activator"
-                    src="images/miniatures/miniature-proyect-6.jpg"
+                    src="images/miniatures/miniature-proyect-2.jpg"
                     alt="Captura del proyecto"
                   />
                 </div>
                 <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4"
-                    >Proyecto 1<i class="material-icons right"
-                      >more_vert</i
-                    ></span
-                  >
-                  <p>
-                    <div class="chip">HTML</div>
-                    <div class="chip">CSS</div>
-                    <div class="chip">JS</div>
-                  </p>
+                  <span class="card-title activator grey-text text-darken-4">
+                    WhatsApp UI
+                    <i class="material-icons right">more_vert</i>
+                  </span>
+                  <p><span class="chip">Materialize</span></p>
                 </div>
                 <div class="card-action">
-                  <a class="waves-effect waves-light btn-small"
-                    ><i class="material-icons left">search</i>Vivo</a
+                  <a
+                    href="https://jsamuelap.github.io/WhatsApp-UI/"
+                    target="_blank"
+                    class="waves-effect waves-light btn-small"
                   >
-                  <a class="waves-effect waves-light btn-small"
-                    ><i class="material-icons left">code</i>Código</a
+                    <i class="material-icons left">search</i>
+                    Vivo
+                  </a>
+                  <a
+                    href="https://github.com/JSamuelAP/WhatsApp-UI"
+                    target="_blank"
+                    class="waves-effect waves-light btn-small"
                   >
+                    <i class="material-icons left">code</i>
+                    Código
+                  </a>
                 </div>
                 <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4"
-                    >Proyecto 1<i class="material-icons right">close</i></span
-                  >
-                  <p>
-                    Here is some more information about this product that is
-                    only revealed once clicked on.
-                  </p>
+                  <span class="card-title grey-text text-darken-4">
+                    WhatsApp UI
+                    <i class="material-icons right">close</i>
+                  </span>
+                  <p>Clon de la interfaz principal de WhatsApp Android 📱.</p>
                 </div>
-              </div>
+              </article>
             </div>
             <div class="col s12 m6 l4">
-              <div class="card sticky-action hoverable">
+              <article class="card sticky-action hoverable">
                 <div class="card-image waves-effect waves-block waves-light">
                   <img
                     class="activator"
-                    src="images/miniatures/miniature-proyect-6.jpg"
+                    src="images/miniatures/miniature-proyect-3.jpg"
                     alt="Captura del proyecto"
                   />
                 </div>
                 <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4"
-                    >Proyecto 1<i class="material-icons right"
-                      >more_vert</i
-                    ></span
-                  >
+                  <span class="card-title activator grey-text text-darken-4">
+                    Goza México
+                    <i class="material-icons right">more_vert</i>
+                  </span>
                   <p>
-                    <div class="chip">HTML</div>
-                    <div class="chip">CSS</div>
-                    <div class="chip">JS</div>
+                    <span class="chip">Sass</span>
+                    <span class="chip">JS</span>
                   </p>
                 </div>
                 <div class="card-action">
-                  <a class="waves-effect waves-light btn-small"
-                    ><i class="material-icons left">search</i>Vivo</a
+                  <a
+                    href="https://jsamuelap.github.io/goza-mexico/"
+                    target="_blank"
+                    class="waves-effect waves-light btn-small"
                   >
-                  <a class="waves-effect waves-light btn-small"
-                    ><i class="material-icons left">code</i>Código</a
+                    <i class="material-icons left">search</i>
+                    Vivo
+                  </a>
+                  <a
+                    href="https://github.com/JSamuelAP/goza-mexico"
+                    target="_blank"
+                    class="waves-effect waves-light btn-small"
                   >
+                    <i class="material-icons left">code</i>
+                    Código
+                  </a>
                 </div>
                 <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4"
-                    >Proyecto 1<i class="material-icons right">close</i></span
-                  >
+                  <span class="card-title grey-text text-darken-4">
+                    Goza México
+                    <i class="material-icons right">close</i>
+                  </span>
                   <p>
-                    Here is some more information about this product that is
-                    only revealed once clicked on.
+                    Sitio web de galerías de los lugares más impresionantes de
+                    México 🇲🇽.
                   </p>
                 </div>
-              </div>
+              </article>
             </div>
             <div class="col s12 m6 l4">
-              <div class="card sticky-action hoverable">
+              <article class="card sticky-action hoverable">
                 <div class="card-image waves-effect waves-block waves-light">
                   <img
                     class="activator"
-                    src="images/miniatures/miniature-proyect-6.jpg"
+                    src="images/miniatures/miniature-proyect-4.jpg"
                     alt="Captura del proyecto"
                   />
                 </div>
                 <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4"
-                    >Proyecto 1<i class="material-icons right"
-                      >more_vert</i
-                    ></span
-                  >
-                  <p>
-                    <div class="chip">HTML</div>
-                    <div class="chip">CSS</div>
-                    <div class="chip">JS</div>
-                  </p>
+                  <span class="card-title activator grey-text text-darken-4">
+                    Club Astucia
+                    <i class="material-icons right">more_vert</i>
+                  </span>
+                  <p><span class="chip">Responsiv</span></p>
                 </div>
                 <div class="card-action">
-                  <a class="waves-effect waves-light btn-small"
-                    ><i class="material-icons left">search</i>Vivo</a
+                  <a
+                    href="https://jsamuelap.github.io/AstuciaWeb/"
+                    target="_blank"
+                    class="waves-effect waves-light btn-small"
                   >
-                  <a class="waves-effect waves-light btn-small"
-                    ><i class="material-icons left">code</i>Código</a
+                    <i class="material-icons left">search</i>
+                    Vivo
+                  </a>
+                  <a
+                    href="https://github.com/JSamuelAP/AstuciaWeb"
+                    target="_blank"
+                    class="waves-effect waves-light btn-small"
                   >
+                    <i class="material-icons left">code</i>
+                    Código
+                  </a>
                 </div>
                 <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4"
-                    >Proyecto 1<i class="material-icons right">close</i></span
-                  >
-                  <p>
-                    Here is some more information about this product that is
-                    only revealed once clicked on.
-                  </p>
+                  <span class="card-title grey-text text-darken-4">
+                    Club Astucia
+                    <i class="material-icons right">close</i>
+                  </span>
+                  <p>Página web sobre el club de fútbol ficticio Astucia ⚽.</p>
                 </div>
-              </div>
+              </article>
             </div>
             <div class="col s12 m6 l4">
-              <div class="card sticky-action hoverable">
+              <article class="card sticky-action hoverable">
                 <div class="card-image waves-effect waves-block waves-light">
                   <img
                     class="activator"
-                    src="images/miniatures/miniature-proyect-6.jpg"
+                    src="images/miniatures/miniature-proyect-5.jpg"
                     alt="Captura del proyecto"
                   />
                 </div>
                 <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4"
-                    >Proyecto 1<i class="material-icons right"
-                      >more_vert</i
-                    ></span
-                  >
+                  <span class="card-title activator grey-text text-darken-4">
+                    Ristorante
+                    <i class="material-icons right">more_vert</i>
+                  </span>
                   <p>
-                    <div class="chip">HTML</div>
-                    <div class="chip">CSS</div>
-                    <div class="chip">JS</div>
+                    <span class="chip">Flexbox</span>
+                    <span class="chip">CSS Grid</span>
                   </p>
                 </div>
                 <div class="card-action">
-                  <a class="waves-effect waves-light btn-small"
-                    ><i class="material-icons left">search</i>Vivo</a
+                  <a
+                    href="https://jsamuelap.github.io/ristorante-web/"
+                    target="_blank"
+                    class="waves-effect waves-light btn-small"
                   >
-                  <a class="waves-effect waves-light btn-small"
-                    ><i class="material-icons left">code</i>Código</a
+                    <i class="material-icons left">search</i>
+                    Vivo
+                  </a>
+                  <a
+                    href="https://github.com/JSamuelAP/ristorante-web"
+                    target="_blank"
+                    class="waves-effect waves-light btn-small"
                   >
+                    <i class="material-icons left">code</i>
+                    Código
+                  </a>
                 </div>
                 <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4"
-                    >Proyecto 1<i class="material-icons right">close</i></span
-                  >
-                  <p>
-                    Here is some more information about this product that is
-                    only revealed once clicked on.
-                  </p>
+                  <span class="card-title grey-text text-darken-4">
+                    Ristorante
+                    <i class="material-icons right">close</i>
+                  </span>
+                  <p>Página web sobre un restaurante 🍲.</p>
                 </div>
-              </div>
+              </article>
             </div>
             <div class="col s12 m6 l4">
-              <div class="card sticky-action hoverable">
+              <article class="card sticky-action hoverable">
                 <div class="card-image waves-effect waves-block waves-light">
                   <img
                     class="activator"
@@ -521,35 +556,45 @@
                   />
                 </div>
                 <div class="card-content">
-                  <span class="card-title activator grey-text text-darken-4"
-                    >Proyecto 1<i class="material-icons right"
-                      >more_vert</i
-                    ></span
-                  >
+                  <span class="card-title activator grey-text text-darken-4">
+                    Mi primera página
+                    <i class="material-icons right">more_vert</i>
+                  </span>
                   <p>
-                    <div class="chip">HTML</div>
-                    <div class="chip">CSS</div>
-                    <div class="chip">JS</div>
+                    <span class="chip">HTML</span>
+                    <span class="chip">CSS</span>
+                    <span class="chip">Git</span>
                   </p>
                 </div>
                 <div class="card-action">
-                  <a class="waves-effect waves-light btn-small"
-                    ><i class="material-icons left">search</i>Vivo</a
+                  <a
+                    href="https://jsamuelap.github.io/mi-primer-proyecto/"
+                    target="_blank"
+                    class="waves-effect waves-light btn-small"
                   >
-                  <a class="waves-effect waves-light btn-small"
-                    ><i class="material-icons left">code</i>Código</a
+                    <i class="material-icons left">search</i>
+                    Vivo
+                  </a>
+                  <a
+                    href="https://github.com/JSamuelAP/mi-primer-proyecto"
+                    target="_blank"
+                    class="waves-effect waves-light btn-small"
                   >
+                    <i class="material-icons left">code</i>
+                    Código
+                  </a>
                 </div>
                 <div class="card-reveal">
-                  <span class="card-title grey-text text-darken-4"
-                    >Proyecto 1<i class="material-icons right">close</i></span
-                  >
+                  <span class="card-title grey-text text-darken-4">
+                    Mi primera página
+                    <i class="material-icons right">close</i>
+                  </span>
                   <p>
-                    Here is some more information about this product that is
-                    only revealed once clicked on.
+                    Esta fue la primera págia con la que comencé todo 💚, trata
+                    sobre mí y mis gustos.
                   </p>
                 </div>
-              </div>
+              </article>
             </div>
           </div>
         </section>
